<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/deep_navy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgPoster"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:scaleType="centerCrop"
                    tools:src="@drawable/sample_poster" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/nanum_square_round_bold"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:layout_constraintEnd_toStartOf="@+id/lottie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="베테랑2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtOpenDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nanum_square_round_regular"
                android:textColor="@color/gray"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@+id/txtTitle"
                app:layout_constraintStart_toStartOf="@+id/txtTitle"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                tools:text="2024.09.13" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/lottie_bookmark" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:paddingHorizontal="32dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOpenDate"
                tools:itemCount="3"
                tools:listitem="@layout/row_genre" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/runTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/nanum_square_neo_regular"
                android:text="@string/str_details_runtime"
                android:textColor="@color/gray"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_neo_regular"
                android:text="@string/str_details_nation"
                android:textColor="@color/gray"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/runTime" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_square_neo_regular"
                android:text="@string/str_details_grade"
                android:textColor="@color/gray"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/runTime" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtRunTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nanum_square_neo_bold"
                android:textColor="@color/lighter_gray"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="@+id/guideline1"
                app:layout_constraintStart_toStartOf="@+id/runTime"
                app:layout_constraintTop_toBottomOf="@+id/runTime"
                tools:text="118분" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nanum_square_neo_bold"
                android:textColor="@color/lighter_gray"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/nation"
                app:layout_constraintTop_toTopOf="@+id/txtRunTime"
                tools:text="대한민국" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtGrade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/nanum_square_neo_bold"
                android:textColor="@color/lighter_gray"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/txtRunTime"
                tools:text="15세 이상" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/nanum_square_neo_bold"
                android:text="@string/str_details_plot"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/runTime"
                app:layout_constraintTop_toBottomOf="@+id/txtNation" />

            <kr.co.prnd.readmore.ReadMoreTextView
                android:id="@+id/txtPlot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/nanum_square_neo_regular"
                android:justificationMode="none"
                android:lineSpacingExtra="12dp"
                android:textColor="@color/lighter_gray"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plot"
                app:readMoreColor="@color/lighter_navy"
                app:readMoreMaxLine="4"
                app:readMoreText=" …더보기"
                tools:text="가족들도 못 챙기고 밤낮 없이 범죄들과 싸우는 베테랑 형사 '서도철'(황정민)과 강력범죄수사대 형사들.어느 날, 한 교수의 죽음이 이전에 발생했던 살인 사건들과 연관성이 있는 것으로 밝혀지며 전국은 연쇄살인범으로 인해 떠들썩해진다. 이에 단서를 추적하며 수사를 시작한 형사들. 하지만 이들을 비웃기라도 하듯, 연쇄살인범은 다음 살인 대상을 지목하는 예고편을 인터넷에 공개하며 또 한 번 전 국민을 흔들어 놓는다.강력범죄수사대는 서도철의 눈에 든 정의감 넘치는 막내 형사 '박선우' (정해인)를 투입한다. 그리고 사건은 새로운 방향으로 흐르게 되는데..." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>